--- a/Olympiad/app/src/main/AndroidManifest.xml
+++ b/Olympiad/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".TabBar.TabBarActivity" />
         <activity android:name=".Register.RegisterActivityA" />
         <activity android:name=".Register.RegisterActivityB" />
+        <activity android:name=".Message.MessageActivity" />
 
 
     </application>
