--- a/Olympiad/app/src/main/AndroidManifest.xml
+++ b/Olympiad/app/src/main/AndroidManifest.xml
@@ -42,11 +42,17 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".TabBar.TabBarActivity" />
-        <activity android:name=".Register.RegisterActivityA" />
-        <activity android:name=".Register.RegisterActivityB" />
-        <activity android:name=".Message.MessageActivity" />
+        <activity android:name=".TabBar.TabBarActivity"
+            android:screenOrientation="portrait" />
 
+        <activity android:name=".Register.RegisterActivityA"
+            android:screenOrientation="portrait" />
+
+        <activity android:name=".Register.RegisterActivityB"
+            android:screenOrientation="portrait" />
+
+        <activity android:name=".Message.MessageActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
