--- a/Olympiad/app/build.gradle
+++ b/Olympiad/app/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.firebaseui:firebase-ui:0.4.0'
+    compile 'com.google.firebase:firebase-ads:9.8.0'
     testCompile 'junit:junit:4.12'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
